src/rfx/tests/command_line/compile_simple_0.received.out
exit_status:1
output: [
..\src\rfx\tests\command_line\compile_simple.rfx(4): error 20001: unexpected identifier, expected ':'

void main()
     ^~~~
Unexpected error: Unspecified failure
]
